Updates gradle wrapper to use version 7.2 and updates build script for 7.2 compatibility.